--- a/DemoApplication/app/src/main/res/values/strings.xml
+++ b/DemoApplication/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
     <string name="app_name">Calculator</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="default_answer">0</string>
+    <string name="ready_text">Ready!</string>
     <string name="button_7">7</string>
     <string name="button_8">8</string>
     <string name="button_9">9</string>
